# homesec

./: .dockerignore  .env.example  .gitignore  .graphify_analysis.json  .graphify_detect.json  .graphify_semantic.partial.json  AGENTS.md  CHANGELOG.md  DESIGN.md  Dockerfile  Makefile  PATENT_RESEARCH.md  PLUGIN_DEVELOPMENT.md  README.md  TESTING.md  alembic.ini  docker-compose.oci.yml  docker-compose.postgres.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  refactor_plan.md  repository.json  rtsp_improvements_plan.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  docker-publish.yml  release.yaml
alembic/: env.py
alembic/versions/: 1c3a6f9d2b10_backfill_alert_decision_timestamps.py  2e87ef73f2d4_add_mobile_device_capabilities.py  7b0b1fbfc69b_add_mobile_device_registry.py  d936851f725a_add_clip_query_expression_indexes.py  e6f25df0df90_initial.py
config/: example.yaml  local.yaml  production.yaml  sample.yaml
dev/: talk_tone.py
dev/fake-camera/: mediamtx.yml  mock_onvif.py
docs/: ha-phase-0-prerequisites.md  ha-phase-1-rest-api.md  ha-phase-2-ha-notifier.md  ha-phase-3-addon.md  ha-phase-4-ha-integration.md  ha-phase-5-advanced.md  home-assistant-implementation-plan.md  home-assistant-integration-brainstorm.md  ios-app-design.md  ios-build-runbook.md  migrations.md  postgres-backups.md  preview-deployment.md  push-to-talk.md
docs/decisions/: 001-sqlite-support.md
docs/specs/: frigate-events-source.md
graphify-out/: EXTRACTION_NOTES.md  GRAPH_REPORT.md  cost.json  manifest.json
graphify-out/wiki/: Accepts_Allowed_Extensions.md  Actions.md  Active_Raisinglivepublisher_Raise.md  Activefullscreenelement_Exitactivefullscreen_Web.md  Add_Cache_Run.md  Add_Configmanager_Write.md  Add_Remove_Replace.md  Address_Dev_Fake.md  Adds_Removes_Detection.md  Advancetoconfirm_Cameraaddflow_Tsx.md  Alembic_Plain_Postgres.md  Alert_Mqtt_Notifier.md  Alert_Policy_Load.md  Alert_Policy_Selected.md  Alertdecision.md  Alertdecision_Noopalertpolicy_Make.md  Alertpolicy_Plugintype_Alert.md  Alertpolicyform_Risk_Alert.md  Analysis_Html_Escapes.md  Analysisresult.md  Analysisresult_Stubvlm.md  Analysisresult_Stubvlm_2.md  Analyze_Extracts_Frames.md  Analyze_Limits_Frame.md  Analyze_Make_Handles.md  Analyze_Produce_Structured.md  Analyze_Raises_Jsondecodeerror.md  Analyze_Raises_Runtimeerror.md  Analyze_Raises_Runtimeerror_2.md  Analyze_Raises_Valueerror.md  Analyze_Raises_Valueerror_2.md  Analyzer_Health_Check.md  Analyzer_Load_Vlm.md  Apierror_Canonical_Error.md  Apierror_Error_Appends.md  Apierror_Extractapierrorenvelope_Key.md  Apierrorcode.md  Apikeygate.md  Apikeygate_2.md  Apikeystorage_Http_Requestjson.md  (+1034 more)
homeassistant/: Makefile
homeassistant/addon/: README.md
homeassistant/addon/homesec/: CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.yaml
homeassistant/integration/: DOCKER.md  hacs.json
homeassistant/integration/tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_entities.py
skills/local/homesec-db-logs/: SKILL.md
src/homesec/: __init__.py  app.py  cli.py  errors.py  interfaces.py  log_records.py  logging_setup.py  postgres_support.py  preview_paths.py  storage_paths.py
src/homesec/api/: __init__.py  dependencies.py  errors.py  media_tokens.py  openapi_export.py  pagination.py  preview_tokens.py  redaction.py  runtime_reload.py  server.py  talk_tokens.py
src/homesec/config/: __init__.py  errors.py  loader.py  manager.py  validation.py
src/homesec/db/: __init__.py  dialect.py  engine.py  types.py
src/homesec/health/: __init__.py  server.py
src/homesec/maintenance/: __init__.py  cleanup_clips.py  postgres_backup.py
src/homesec/models/: __init__.py  alert.py  clip.py  config.py  enums.py  events.py  filter.py  mobile.py  setup.py  source.py  storage.py  talk.py  vlm.py
src/homesec/notifiers/: multiplex.py
src/homesec/onvif/: __init__.py  __main__.py  cli.py  client.py  discovery.py  service.py  setup_probe.py
src/homesec/pipeline/: __init__.py  alert_policy.py  core.py
src/homesec/plugins/: __init__.py  registry.py  utils.py
src/homesec/repository/: __init__.py  clip_repository.py  mobile_device_repository.py
src/homesec/retention/: __init__.py  pruner.py  wiring.py
src/homesec/runtime/: __init__.py  assembly.py  bootstrap.py  controller.py  disabled_vlm.py  errors.py  ipc_stream.py  manager.py  models.py  subprocess_controller.py  subprocess_protocol.py  test_worker_harness.py  worker.py
src/homesec/services/: AGENTS.md  __init__.py  setup.py  setup_probe_support.py  setup_probes.py
src/homesec/sources/: __init__.py  base.py  ftp.py  ftp_setup_probe.py  local_folder.py  local_folder_setup_probe.py  rtsp.py
src/homesec/state/: __init__.py  postgres.py
src/homesec/talk/: __init__.py  backend_ids.py  backends.py  registry.py  selector.py
tests/: conftest.py
tests/homesec/: __init__.py  conftest.py  postgres_test_support.py  test_alembic_env.py  test_alert_policy.py  test_api_bootstrap_matrix.py  test_api_dependencies.py  test_api_errors.py  test_api_maintenance_routes.py  test_api_media_route_helpers.py  test_api_media_tokens.py  test_api_onvif.py  test_api_openapi_export.py  test_api_pagination.py  test_api_preview_routes.py  test_api_preview_tokens.py  test_api_routes.py  test_api_runtime_routes.py  test_api_server.py  test_api_setup_routes.py  test_api_talk_e2e.py  test_api_talk_routes.py  test_api_talk_tokens.py  test_apns_mobile_notifier.py  test_app.py  test_cleanup_clips.py  test_cli.py  test_clip_repository.py  test_clip_sources.py  test_config.py  test_config_manager.py  test_db_log_handler.py  test_dropbox_storage.py  test_enums.py  test_event_store.py  test_ftp_source.py  test_health.py  test_home_assistant_notifier.py  test_integration.py  test_local_folder_deduplication.py  (+41 more)
ui/: .gitignore  AGENTS.md  Makefile  README.md  capacitor.config.ts  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
ui/.speakeasy/: README.md
ui/e2e/: mobile-layout.spec.ts
ui/scripts/: api_codegen.mjs
ui/src/: main.tsx
(+364 files in other folders)
